tests/fixtures/invalid/max_set_float.py
# Cannot call max() with Set[int], Float
x = max({1, 2, 3}, 1.0)
